@@ -6,6 +6,8 @@ A devilish (and starchy!) threat has appeared in the Underworld!
 An Arena has appeared within the Underworld, replete with enemies and a massive snake!
 Defeat them and the massive Devilish Snake to get some nice rewards.
 
+A new micro-event lurks under the snow! Find and challenge an ancient foe to reap its reward.
+
 ----
 
 In new worlds, a large tower structure will spawn with a broken portal.
